@@ -1,3 +1,9 @@
+2/27/2006 Bob Rossi <bob@brasko.net>
+
+	* src/highlight_groups.c (ncurses,term): Remove includes.
+        (curses): Add include.
+        (tgetnum): Add prototype.
+
 2/26/2006 Bob Rossi <bob@brasko.net>
 
 	* src/highlight_groups.c (UNSPECIFIED_COLOR): Added define.
